--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 TOKEN_SECRET_KEY=101ce4b9635b39d04559e5c29ffb30f0
-DB_NAME=groupomania
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=christopher
+BD_NAME=groupomania
+BD_HOST=localhost
+BD_USER=root
+BD_PASS=christopher
